--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -227,13 +227,8 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
         <action
-            android:id="@+id/action_nav_profile_to_purchaseHistoryFragment"
-            app:destination="@id/purchaseHistoryFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-        <action
-            android:id="@+id/action_nav_profile_to_offerHistoryFragment"
-            app:destination="@id/offerHistoryFragment"
+            android:id="@+id/action_nav_profile_to_purchaseOfferHistoryFragment"
+            app:destination="@id/purchaseOfferHistoryFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
         <action
@@ -594,4 +589,10 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
+
+    <fragment
+        android:id="@+id/purchaseOfferHistoryFragment"
+        android:name="com.example.tradeupapp.features.history.ui.PurchaseOfferHistoryFragment"
+        android:label="Purchase &amp; Offer History"
+        tools:layout="@layout/fragment_purchase_offer_history" />
 </navigation>
