--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -430,14 +430,25 @@
                             app:tint="?attr/colorOnSurfaceVariant" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <!-- Stats section -->
+                    <!-- Offers List -->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_offers"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        app:layout_constraintTop_toBottomOf="@id/seller_container"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:clipToPadding="false"
+                        android:paddingBottom="16dp"
+                        tools:listitem="@layout/item_offer" />
 
                     <!-- Space for bottom buttons -->
                     <Space
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/seller_container" />
+                        app:layout_constraintTop_toBottomOf="@id/rv_offers" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
