--- a/app/src/main/res/layout/fragment_offer_history.xml
+++ b/app/src/main/res/layout/fragment_offer_history.xml
@@ -33,6 +33,7 @@
             app:tint="?attr/colorOnSurfaceVariant" />
 
         <TextView
+            android:id="@+id/empty_state_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
